started other people section

--- a/app/views/lis/0/assets/assets-summary.html
+++ b/app/views/lis/0/assets/assets-summary.html
@@ -67,7 +67,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home">Save - continue to my low income scheme home</a>
+      <a class="button" href="../lis-home">Save and continue to application home</a>
     </p>
 
   </div>
