--- a/app/views/lis/2/live/living-summary.html
+++ b/app/views/lis/2/live/living-summary.html
@@ -25,7 +25,7 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Are you a joint tenant?</td>
+        <td>Are you a joint owner?</td>
         <td>No</td>
         <td><a href="registration">Change this</a></td>
       </tr>
@@ -35,23 +35,18 @@
         <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you pay rent?</td>
+        <td>Do you have a mortgage or loan secured on your home?</td>
         <td>Yes</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>How often do you pay your rent?</td>
-        <td>Weekly</td>
+        <td>How often do you pay your mortgage?</td>
+        <td>Monthly</td>
         <td><a href="#">Change this</a></td>
       </tr>  
       <tr>
-        <td>Rent per week</td>
-        <td>£90</td>
-        <td><a href="#">Change this</a></td>
-      </tr>  
-      <tr>
-        <td>Does your rent include any of the following?</td>
-        <td>No</td>
+        <td>Payment per month</td>
+        <td>£175</td>
         <td><a href="#">Change this</a></td>
       </tr>  
       <tr>
@@ -87,7 +82,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home-updated">Save - continue to my low income scheme home</a>
+      <a class="button" href="../lis-home-updated">Save and continue</a>
     </p>
 
   </div>
