--- a/app/views/lis/2/live/home.html
+++ b/app/views/lis/2/live/home.html
@@ -16,29 +16,29 @@
       Where do you live?
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="home-handler" method="get" class="form">
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="own" name="home">
+        <input type="radio" id="own" value="own" name="home">
         <label class="form-control-radio" for="own">
           In a property I own (including mortgaged)
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="rented" name="home">
+        <input type="radio" id="rented" value="rented" name="home">
         <label class="form-control-radio" for="rented">
           In rented accommodation
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="else" name="home">
+        <input type="radio" id="else" value="else" name="home">
         <label class="form-control-radio" for="else">
           In someone else's home (for example friends, relatives, parents)
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="homeless" name="home">
+        <input type="radio" id="homeless" value="homeless" name="home">
         <label class="form-control-radio" for="homeless">
           I am homeless
         </label>
@@ -47,7 +47,6 @@
         
     {{
       form_macros.button({
-        href: 'joint',
         label: 'Next'
       })
     }}
