--- a/app/views/lis/2/live/mortgaged/joint.html
+++ b/app/views/lis/2/live/mortgaged/joint.html
@@ -13,22 +13,23 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Does anyone else live in your home with you?
+    Are you a joint owner?
   </h1>
-    
-  <form action="people-handler" method="get" class="form">
+      <p></p>
+  
+  <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="yes" value="yes" name="people">
-              <label class="form-control-radio" for="yes">
+              <input type="radio" id="binary-yes" name="binary">
+              <label class="form-control-radio" for="binary-yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="no" value="no" name="people">
-              <label class="form-control-radio" for="no">
+              <input type="radio" id="binary-no" name="binary">
+              <label class="form-control-radio" for="binary-no">
                 No
               </label>
             </div>
@@ -38,6 +39,7 @@
     
         {{
       form_macros.button({
+        href: 'address',
         label: 'Next'
       })
     }}
