--- a/app/views/lis/2/live/others/name.html
+++ b/app/views/lis/2/live/others/name.html
@@ -8,19 +8,35 @@
 {% block content %}
 
 <main id="content" role="main">
-      
+    
   <div class="grid-row">
     <div class="column-two-thirds">
 
+  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
+
   <h1 class="heading-large">
-      Term start
+    First person's details
   </h1>
 
   <form action="" method="get" class="form">
 
     {{
+      form_macros.text_field({
+        id: 'first-name',
+        label: 'First name'
+      })
+    }}
+
+    {{
+      form_macros.text_field({
+        id: 'last-name',
+        label: 'Last name'
+      })
+    }}
+
+    {{
       form_macros.date_field({
-        label: 'Term start date',
+        label: 'Date of birth',
         hint_date: '31 7 1961',
         id_prefix: 'dob-'
       })
@@ -28,13 +44,11 @@
 
     {{
       form_macros.button({
-        href: 'term-end',
+        href: 'relationship',
         label: 'Next'
       })
     }}
-    
     <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
-
   </form>
     </div>
     </div>
