--- a/app/views/lis/2/you/about-you-summary.html
+++ b/app/views/lis/2/you/about-you-summary.html
@@ -133,7 +133,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home2">Save - continue to my low income scheme home</a>
+      <a class="button" href="../lis-home2">Save and continue</a>
     </p>
 
   </div>
