--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -182,7 +182,14 @@ p.intro-to-list {
 .section-tick {
   width:10%;
   vertical-align:text-top;
-  padding-left: 1em;
+  padding-left:1em;
+}
+
+.amount {
+  font-size: 2.121rem;
+  float: left;
+  margin: 0.3rem 0.8rem 0 0;
+  font-weight: bold;
 }
 
 
