--- a/app/views/lis/2/assets/money.html
+++ b/app/views/lis/2/assets/money.html
@@ -17,47 +17,47 @@
         <span class="form-hint">Tick all that apply</span>
       </h1>
       
-  <form>
+  <form action="account-type-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="ib" name="bgroup1">
-        <label class="form-control-checkbox" for="ib">
-          Bank or building society accounts
+        <input type="checkbox" id="bank" name="banktype" value="bank">
+        <label class="form-control-checkbox" for="bank">
+          Bank, building society or savings accounts
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="pb" name="bgroup1">
+        <input type="checkbox" id="pb" name="banktype">
         <label class="form-control-checkbox" for="pb">
           Premium bonds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="cp" name="bgroup1">
+        <input type="checkbox" id="cp" name="banktype">
         <label class="form-control-checkbox" for="cp">
           Capital bonds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sh" name="bgroup1">
+        <input type="checkbox" id="sh" name="banktype">
         <label class="form-control-checkbox" for="sh">
           Shares
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="nsc" name="bgroup1">
+        <input type="checkbox" id="nsc" name="banktype">
         <label class="form-control-checkbox" for="nsc">
           National Saving Certificates
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="isa" name="bgroup1">
+        <input type="checkbox" id="isa" name="banktype">
         <label class="form-control-checkbox" for="isa">
-          Individual Saving Accounts (ISAs) or any other investments
+          Any other investments
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" name="bgroup1">
+        <input type="checkbox" id="none" name="banktype">
         <label class="form-control-checkbox" for="none">
           I don't have any of these
         </label>
@@ -65,7 +65,6 @@
 
             {{
           form_macros.button({
-            href: 'other',
             label: 'Next'
           })
         }}
