--- a/app/views/lis/2/you/pension/private-pension-amount.html
+++ b/app/views/lis/2/you/pension/private-pension-amount.html
@@ -47,8 +47,8 @@
       </div>
       
     {{
-      form_macros.text_field({
-        id: 'first-name',
+      form_macros.amount_field({
+        id: 'money-amount',
         label: 'How much do you receive?'
       })
     }}
@@ -82,7 +82,7 @@
         label: 'Next'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
   </form>
     </div>
     </div>
