added screens to capture member of the household - updated the partner and money summary pages

--- a/app/views/lis/2/assets/assets-summary.html
+++ b/app/views/lis/2/assets/assets-summary.html
@@ -21,53 +21,53 @@
     <table class="data-table assets-summary">
       <tr>
         <td>Do you have any property or land in this country<br>or abroad?</td>
-        <td>Yes</td>
-        <td><a href="registration">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Do you have any savings or other money<br>in this country or abroad?</td>
-        <td>Yes</td>
-        <td><a href="registration">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Bank or building society accounts</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="property">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Bank, building society or savings accounts</td>
+        <td>Yes</td>
+        <td><a href="money">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Total held in bank, building society or savings accounts</td>
+        <td>£8000</td>
+        <td><a href="accounts">Change this</a></td>
       </tr>
       <tr>
         <td>Premium bonds</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="money">Change this</a></td>
       </tr>
       <tr>
         <td>Capital bonds</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="money">Change this</a></td>
       </tr>
       <tr>
         <td>Shares</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="money">Change this</a></td>
       </tr>
       <tr>
         <td>National Saving Certificates</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="money">Change this</a></td>
       </tr>
       <tr>
-        <td>Individual Saving Accounts(ISAs) or any other investments</td>
+        <td>Any other investments</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="money">Change this</a></td>
       </tr>
       <tr>
-        <td>Other money</td>
+        <td>Do you have any other money</td>
         <td>Yes</td>
-        <td><a href="registration">Change this</a></td>
+        <td><a href="other">Change this</a></td>
       </tr>
       <tr>
         <td>Total other money</td>
-        <td>£300</td>
-        <td><a href="registration">Change this</a></td>
+        <td>£70</td>
+        <td><a href="other">Change this</a></td>
       </tr>
     </table>
     
