--- a/app/views/lis/2/assets/property.html
+++ b/app/views/lis/2/assets/property.html
@@ -16,6 +16,7 @@
 
   <h1 class="heading-large">
     Do {{partnerText}} have any property or land in this country or abroad?
+    <span class="form-hint">Do not include the house where you live</span>
   </h1>
 
   <form action="" method="get" class="form">
