--- a/app/views/lis/2/live/adapted.html
+++ b/app/views/lis/2/live/adapted.html
@@ -38,7 +38,7 @@
     
         {{
       form_macros.button({
-        href: 'people',
+        href: 'others/people',
         label: 'Next'
       })
     }}
