--- a/app/views/lis/2/live/living-summary.html
+++ b/app/views/lis/2/live/living-summary.html
@@ -40,7 +40,7 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>How often do you pay your mortgage?</td>
+        <td>How often do you pay your mortgage or secured loan?</td>
         <td>Monthly</td>
         <td><a href="#">Change this</a></td>
       </tr>  
@@ -76,9 +76,70 @@
       </tr>
       <tr>
         <td>Does anyone else live in your home with you?</td>
+        <td>Yes</td>
+        <td><a href="registration">Change this</a></td>
+      </tr>
+      <tr>
+        <td>First name</td>
+        <td>Thomas</td>
+        <td><a href="registration">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Last name</td>
+        <td>Smith</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Date of birth</td>
+        <td>2 June 1986</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Relationship to you</td>
+        <td>Son</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do they have a job</td>
+        <td>Son</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do they work for 16 hours or more per week?</td>
+        <td>Yes</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>How often do they get paid?</td>
+        <td>weekly</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>How much do they receive before tax and national insurance are taken off?</td>
+        <td>£200</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are they in full time education?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do they receive any of the following?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are they registered blind?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Does anyone else live in your home with you?</td>
         <td>No</td>
         <td><a href="registration">Change this</a></td>
       </tr>
+
     </table>
     
     <p>
