--- a/app/views/lis/2/live/mortgaged/mortgage-amount.html
+++ b/app/views/lis/2/live/mortgaged/mortgage-amount.html
@@ -13,10 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your mortgage
+    About your mortgage or secured loan
   </h1>
   
-  <h2 class="heading-medium">How often do you pay your mortgage?</h2>
+  <h2 class="heading-medium">How often do you pay your mortgage or secured loan?</h2>
   
   <form action="" method="get" class="form">
 
