--- a/app/views/lis/2/live/others/name.html
+++ b/app/views/lis/2/live/others/name.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    First person's details
+    Person's details
   </h1>
 
   <form action="" method="get" class="form">
