--- a/app/views/lis/2/partner/summary.html
+++ b/app/views/lis/2/partner/summary.html
@@ -23,7 +23,7 @@
       <tr>
         <td>Do you have a partner?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="partner">Change this</a></td>
       </tr>
     </table>
     
