--- a/app/views/lis/2/live/others/blind.html
+++ b/app/views/lis/2/live/others/blind.html
@@ -10,25 +10,24 @@
 <main id="content" role="main">
   
   <div class="grid-row">
-    
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Are they in full time education?
+        Are they registered blind?
       </h1>
-
+  
       <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
                 <div class="form-group">
-                  <input type="radio" id="binary-yes" name="education" value="yes">
+                  <input type="radio" id="binary-yes" name="work" value="yes">
                   <label class="form-control-radio" for="binary-yes">
                     Yes
                   </label>
                 </div>
                 <div class="form-group">
-                  <input type="radio" id="binary-no" name="education" value="no">
+                  <input type="radio" id="binary-no" name="work" value="no">
                   <label class="form-control-radio" for="binary-no">
                     No
                   </label>
@@ -37,12 +36,12 @@
             </fieldset>
           </div>
 
-          {{
-            form_macros.button({
-              href: 'benefits',
-              label: 'Next'
-            })
-          }}
+        {{
+          form_macros.button({
+            href: 'people',
+            label: 'Next'
+          })
+        }}
 
     <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
 
