--- a/app/views/lis/2/live/others/people.html
+++ b/app/views/lis/2/live/others/people.html
@@ -16,19 +16,19 @@
     Does anyone else live in your home with you?
   </h1>
     
-  <form action="" method="get" class="form">
+  <form action="people-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="binary-yes" name="binary">
-              <label class="form-control-radio" for="binary-yes">
+              <input type="radio" id="yes" value="yes" name="people">
+              <label class="form-control-radio" for="yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="binary-no" name="binary">
-              <label class="form-control-radio" for="binary-no">
+              <input type="radio" id="no" value="no" name="people">
+              <label class="form-control-radio" for="no">
                 No
               </label>
             </div>
@@ -38,7 +38,6 @@
     
         {{
       form_macros.button({
-        href: 'living-summary',
         label: 'Next'
       })
     }}
