--- a/app/views/lis/2/lis-home2.html
+++ b/app/views/lis/2/lis-home2.html
@@ -27,7 +27,7 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/registration">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><a href="you/about-you-summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
           </tr>
           <tr>
             <td>About your partner</td>
