--- a/app/views/lis/2/lis-home4.html
+++ b/app/views/lis/2/lis-home4.html
@@ -27,15 +27,15 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/registration">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><a href="you/about-you-summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><a href="partner/partner">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><a href="partner/summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/property">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
+            <td><a href="assets/assets-summary">View or edit</a> <img src="/public/images/tick_gr.png" class="section-tick"></td>
           </tr>
           <tr>
             <td>About where you live</td>
