--- a/app/views/lis/2/you/about-you-summary.html
+++ b/app/views/lis/2/you/about-you-summary.html
@@ -27,52 +27,52 @@
       <tr>
         <td>Last name</td>
         <td>Smith</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
         <td>Date of birth</td>
         <td>24 March 1955</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
         <td>Email address</td>
         <td>bill.smith@inter.net</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="contact">Change this</a></td>
       </tr>
       <tr>
         <td>Telephone number</td>
         <td>0191 123 1234</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="contact">Change this</a></td>
       </tr>
       <tr>
         <td>Are you living permanently in a care home?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="care-home">Change this</a></td>
       </tr>
       <tr>
         <td>Are you currently in hospital?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="hospital">Change this</a></td>
       </tr>
       <tr>
         <td>Do you have a job</td>
         <td>{{myWork}}</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="work">Change this</a></td>
       </tr>
       <tr>
         <td>Are you in full time education?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="education">Change this</a></td>
       </tr>
       <tr>
         <td>Do you receive a pension?</td>
         <td>Yes</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/pension">Change this</a></td>
       </tr>
       <tr>
         <td>Do you receive pension credit?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/pension-credit">Change this</a></td>
       </tr>
       <tr>
         <td>
@@ -82,52 +82,52 @@
           State pension<br>
           Private pension
         </td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/pension-type">Change this</a></td>
       </tr>
       <tr>
         <td>How often do you receive your state pension payments?</td>
         <td>Weekly</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/pension-amount">Change this</a></td>
       </tr>
       <tr>
         <td>How much do you receive for your state pension each week?</td>
         <td>£123</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/pension-credit">Change this</a></td>
       </tr>
       <tr>
       <td>How often do you receive your private pension payments?</td>
         <td>Weekly</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
         <td>How much do you receive for your private pension?</td>
         <td>£123</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
         <td>Do you receive any of the following benefits?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="benefits/benefit-group1">Change this</a></td>
       </tr>
       <tr>
         <td>Do you receive any other social security benefit?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="benefits/benefit7">Change this</a></td>
       </tr>
       <tr>
         <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="benefits/benefit4">Change this</a></td>
       </tr>
       <tr>
         <td>Does someone other than your partner get carers allowance for looking after you?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="benefits/benefit5">Change this</a></td>
       </tr>
       <tr>
         <td>Do you receive any other money?</td>
         <td>No</td>
-        <td><a href="#">Change this</a></td>
+        <td><a href="benefits/other-money">Change this</a></td>
       </tr>
 
     </table>
