updated summary pages

--- a/app/views/lis/2/live/living-summary.html
+++ b/app/views/lis/2/live/living-summary.html
@@ -80,13 +80,8 @@
         <td><a href="people">Change this</a></td>
       </tr>
       <tr>
-        <td>First name</td>
-        <td>Thomas</td>
-        <td><a href="others/name">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Last name</td>
-        <td>Smith</td>
+        <td>Name</td>
+        <td>Thomas Smith</td>
         <td><a href="others/name">Change this</a></td>
       </tr>
       <tr>
@@ -100,8 +95,8 @@
         <td><a href="others/relationship">Change this</a></td>
       </tr>
       <tr>
-        <td>Do they have a job</td>
-        <td>Son</td>
+        <td>Do they have a job?</td>
+        <td>Yes</td>
         <td><a href="others/work">Change this</a></td>
       </tr>
       <tr>
