--- a/app/views/lis/2/you/about-you-summary.html
+++ b/app/views/lis/2/you/about-you-summary.html
@@ -20,13 +20,8 @@
 
     <table class="data-table you-summary">
       <tr>
-        <td>First name</td>
-        <td>Bill</td>
-        <td><a href="registration">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Last name</td>
-        <td>Smith</td>
+        <td>Your name</td>
+        <td>Miriam Smith</td>
         <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
@@ -36,7 +31,7 @@
       </tr>
       <tr>
         <td>Email address</td>
-        <td>bill.smith@inter.net</td>
+        <td>m.smith@inter.net</td>
         <td><a href="contact">Change this</a></td>
       </tr>
       <tr>
@@ -55,7 +50,7 @@
         <td><a href="hospital">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you have a job</td>
+        <td>Do you have a job?</td>
         <td>{{myWork}}</td>
         <td><a href="work">Change this</a></td>
       </tr>
@@ -79,38 +74,17 @@
           Which pensions do you receive?
         </td>
         <td>
-          State pension<br>
           Private pension
         </td>
         <td><a href="pension/pension-type">Change this</a></td>
       </tr>
       <tr>
-        <td>How often do you receive your state pension payments?</td>
-        <td>Weekly</td>
-        <td><a href="pension/pension-amount">Change this</a></td>
-      </tr>
-      <tr>
-        <td>How much do you receive for your state pension each week?</td>
-        <td>£123</td>
-        <td><a href="pension/pension-credit">Change this</a></td>
-      </tr>
-      <tr>
-      <td>How often do you receive your private pension payments?</td>
-        <td>Weekly</td>
-        <td><a href="pension/private-pension-amount">Change this</a></td>
-      </tr>
-      <tr>
         <td>How much do you receive for your private pension?</td>
-        <td>£123</td>
+        <td>£123 per week</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you receive any of the following benefits?</td>
-        <td>No</td>
-        <td><a href="benefits/benefit-group1">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Do you receive any other social security benefit?</td>
+        <td>Do you receive any social security benefits?</td>
         <td>No</td>
         <td><a href="benefits/benefit7">Change this</a></td>
       </tr>
@@ -120,7 +94,7 @@
         <td><a href="benefits/benefit4">Change this</a></td>
       </tr>
       <tr>
-        <td>Does someone other than your partner get carers allowance for looking after you?</td>
+        <td>Does anyone receive carers allowance for looking after you?</td>
         <td>No</td>
         <td><a href="benefits/benefit5">Change this</a></td>
       </tr>
