--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,12 +8,29 @@
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
       <h2 class="heading-large">Alpha sprint 2</h2>
-      <p>Created early June 2016</p>
+      <p>Created end May 2016</p>
       <ul>
         <li><a href="/lis/2/index">Start page</a></li>
         <li><a href="/lis/2/lis-home">My lis home page</a></li>
+        <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
-  
+      <p>
+        <span class="strong">What we plan to test: </span> 
+        Full end to end journey for a pensioner who has a state, private pension or both. Lives in their own home and pays council tax. This pensioner has some entitlement and has a working, non-dependant son living in the household, no benefits.
+      </p>
+        <ul>
+          <li><span class="strong">What we changed:<br> </span></li>
+          <li>Updated the <a href="lis/2/full-help">end screen</a> because users didn't feel they were 'done'.</li>
+          <li>Added visual feedback on the <a href="lis/2/lis-home4">hub screen</a> to show a section was complete.</li>
+          <li>Added <a href="lis/2/assets/accounts">savings accounts</a> and amended the text so that the <a href="lis/2/assets/money">savings options</a> were hopefully clearer.</li>
+          <li>Added ability to <a href="lis/2/live/others/people">tell us that someone else lives in your home</a> and their circumstances.</li>
+          <li>Enabled the prototype to allow the user to select <a href="lis/2/live/home">in a home I own</a> and tailored the questions based on this choice.</li>
+          <li>Enabled the prototype to handle a users' choice of <a href="lis/2/you/pension/pension-type">pensions</a> and only ask the relevant question based on their choice.</li>
+          <li>Added a <a href="lis/2/part-help">partial help screen</a></li>
+          <li>Added text to the <a href="lis/2/live/rent">rent amount screen</a> to explain the amount a user should enter.</li>
+        </ul>
+
       <h2 class="heading-large">Alpha sprint 1</h2>
       <p>Created mid May 2016</p>
       <ul>
@@ -26,13 +43,17 @@
         <span class="strong">What we tested: </span> 
         Full end to end journey for a pensioner who has a state and a private pension, rents their home and pays council tax. This pensioner has full entitlement and there are no others in household, no benefits.
       </p>
-      <p>
-        <span class="strong">What we found: </span> 
-        Users want clearer info around what part of their rent they need to tell us about, if they get help towards it. They need clearer feedback that the application has been submitted and what the next steps are. Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.
-      </p>
+      <ul>
+        <li><span class="strong">What we found: </span></li> 
+        <li>Overall, users found this easy to use.</li> 
+        <li>Biggest issues were around 1) known issues below, 2) language, 3) benefit questions</li> 
+        <li>Users want clearer info around what part of their rent they need to tell us about, if they get help towards it.</li>
+        <li>They need clearer feedback that the application has been submitted and what the next steps are. </li>
+        <li>Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.</li>
+      </ul>
       <p>
         <span class="strong">Known issues: </span> 
-        No error messages in the prototype. No feedback when sections are done. Uses dummy data on summary screens. Users don't understand benefits and use different names for them. We need to understand how oftern people pay for things like rent and be more explicit about monthly, four weekly vs calendar month.
+        No error messages in the prototype. No feedback when sections are done. Uses dummy data on summary screens. Users don't understand benefits and use different names for them. We need to understand how often people pay for things like rent and be more explicit about monthly, four weekly vs calendar month.
       </p>
       <h2 class="heading-large">Sprint 0</h2>
       <p>Created end March 2016</p>
