--- a/app/views/lis/2/assets/money.html
+++ b/app/views/lis/2/assets/money.html
@@ -50,6 +50,12 @@
         </label>
       </div>
       <div class="form-group">
+        <input type="checkbox" id="ut" name="banktype">
+        <label class="form-control-checkbox" for="ut">
+        Unit trusts
+        </label>
+      </div>
+      <div class="form-group">
         <input type="checkbox" id="isa" name="banktype">
         <label class="form-control-checkbox" for="isa">
           Any other investments
