--- a/app/views/lis/2/live/mortgaged/mortgage-amount.html
+++ b/app/views/lis/2/live/mortgaged/mortgage-amount.html
@@ -47,12 +47,12 @@
       </div>
       
     {{
-      form_macros.text_field({
-        id: 'first-name',
+      form_macros.amount_field({
+        id: 'money-name',
       label: 'How much do you pay? <span class="form-hint">Include any endowment premiums linked to the mortgage.<br>Dont include premiums for any other type of insurance or any arrears.</span>'
       })
     }}
-
+      
     </div>  
         
     {{
