--- a/app/views/lis/2/live/others/relationship.html
+++ b/app/views/lis/2/live/others/relationship.html
@@ -40,7 +40,7 @@
       <div class="form-group">
         <input type="radio" id="lodger" name="relationship">
         <label class="form-control-radio" for="lodger">
-         A lodger or border
+         A lodger or boarder
         </label>
       </div>
       <p class="form-block">or</p>
