--- a/app/views/lis/2/part-help.html
+++ b/app/views/lis/2/part-help.html
@@ -7,49 +7,126 @@
 {% block content %}
 
 <main id="content" role="main">
-    
-  <div class="grid-row">
-   
-    <div class="column-two-thirds">
-
-      <div class="text">
-        
-        <h1 class="heading-xlarge">You can get some help with health costs</h1>
-        
-        <h3 class="heading-medium">
-          Your certificate number is:  123 456 789
-        </h3>
-    
-        <p class="lede">
-          This is valid until 01 June 2016
-        </p>
-    
-        <p>This means you do not pay for:</p>
-
-        <lu>
-          <li>Prescriptions</li>
-          <li>Dental treatment</li>
-          <li>Glasses or contact lenses up to £x</li>
-          <li>Travel to hospital appointments</li>
-          <li>Wigs and fabric supports</li>
-        </lu>
-
-
-        <p>You can <a href="#">print this page</a> as evidence.</p>
-        <p>A copy has been emailed to jane.doe@inter.net</p>
-        <p>You can get a copy at any time from <a href="#">here</a></p>
-
-
-        <h2 class="heading-large">Claim a refund</h2>
-        <p>If you have had to pay for any of the above in the last x months you can claim a refund.</p>
-        <p><a href="no-help">Claim a refund</a></p>
-      
-      </div>
-    
-    </div>
   
+  <div class="done-panel">
+    <h2 class="heading-large"><span id="done-tick"> </span>Application complete</h2>
+    <h1 class="heading-xlarge">You can get some help with help costs</h1>
+    <h4 class="heading-small">Your reference number is</h4>
+    <h2 class="heading-large">123 456 789</h2>
+    <h4 class="heading-small">Your certificate expires on 01 June 2018</h4>
   </div>
+  
+  <ul>
+    <li>A copy of your certificate has been emailed to m.smith@inter.net</li>
+    <li><a href=#>Print my certificate</a></li>
+    <li><a href=#>Download my certificate</a></li>
+    <li>You can download or print a copy of your certificate at any time by signing into this service.</li>
+    <li>      
+      <details>
+        <summary><span class="summary">I can't access my certificate</span></summary>
+        <div class="panel panel-border-narrow">
+          <p>
+            If you don't have access to a printer or this is not your own computer we can <a href=#>send a copy in the post</a>
+          </p>
+        </div>
+      </details>
+    </li>
+
+  </ul>
+  <hr>
+  
+  <h2 class="heading-medium">Your entitlement</h2>
+  <ul>
+    <li>Your certificate does not entitle you to free NHS prescriptions.</li>
+    <li>We have worked out that you will need to pay the following towards your health costs:</li>
+  </ul>
+  <!--
+  <table class="data-table cert-table">
+    <tr>
+      <th>Item</th>
+      <th>You pay</th>
+      <th>Towards</th>
+    </tr>
+    <tr>
+      <td>Sight tests</td>
+      <td>up to £35.72</td>
+      <td>a private sight test</td>
+    </tr>
+    <tr>
+      <td>Glasses</td>
+      <td>£71.44</td>
+      <td>the cost of a voucher</td>
+    </tr>
+    <tr>
+      <td>Travel to receive NHS treatment</td>
+      <td>£35.72</td>
+      <td>travel costs in any one week</td>
+    </tr>
+    <tr>
+      <td>NHS dental treatment, wigs, or fabric supports</td>
+      <td>up to £107.16</td>
+      <td>each course of treatment or prescribed item</td>
+    </tr>
+  </table>
+   -->
+
+  <ul class="cert-description">
+    <li class="large">Sight tests</li>
+    <li>you pay a maximum of:</li>
+    <li class="cost">£35.72</li>
+  </ul>
+  <ul class="cert-description">
+    <li class="large">Glasses or contact lenses</li>
+    <li>you pay: </li>
+    <li class="cost">£71.44</li> 
+    <li>
+      towards an optical voucher
+      <details>
+        <summary><span class="summary">What is an optical voucher?</span></summary>
+        <div class="panel panel-border-narrow">
+          <p>
+            Help towards the cost of glasses or contact lenses is provided through optical vouchers.<br>
+            The value of your voucher depends on your prescription.</p>
+          <p>
+            Ask the person who tests your sight what the value of the voucher is for your prescription.
+            <br>Your voucher will be reduced by £71.44.
+          </p>
+          <p>
+            For example:<br>
+            Cost of glasses = £100<br>
+            Value of voucher = £90<br>
+            You would pay £81.44 because the glasses cost £10 more than the voucher.
+          </p>
+        </div>
+      </details>
+    </li>
+  </ul>
+  <ul class="cert-description">
+    <li class="large">Travel to receive NHS treatment</li>
+    <li>you pay: </li>
+    <li class="cost">£35.16</li> 
+    <li>in any one week</li>
+  </ul>
+  <ul class="cert-description">
+    <li class="large">NHS dental treatment, wigs, or fabric supports</li>
+    <li>you pay a maximum of:</li>
+    <li class="cost">£107.16</li> 
+    <li>per course of treatment or prescribed item</li>
+  </ul>
+ 
+  <p>You will need to show a copy of your certificate if you want to claim any of the above.</p>
+  
+  <p class="lede intro">Your certificate covers:</p>
+  
+  <ul class="list list-bullet">
+    <li>Miriam Smith</li>
+  </ul>
+  
+  <p>
+    <a class="button" href="#">Finished</a>
+  </p>
   
 </main>
 
 {% endblock %}
+
