created version 3 and added the routes to routes.js

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,6 +6,9 @@
 
 <main id="content" role="main">
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
+      
+      <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
+
 
       <h2 class="heading-large">Alpha sprint 2</h2>
       <p>Created end May 2016</p>
@@ -15,10 +18,12 @@
         <li><a href="/lis/2/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/2/part-help">Part help outcome</a></li>
       </ul>
-      <p>
-        <span class="strong">What we plan to test: </span> 
-        Full end to end journey for a pensioner who has a state, private pension or both. Lives in their own home and pays council tax. This pensioner has some entitlement and has a working, non-dependant son living in the household, no benefits.
-      </p>
+      <ul>
+        <li><span class="strong">What we plan to test: </span> </li>
+        <li>Full end to end journey for a pensioner who has a state, private pension or both.</li>
+        <li>Lives in their own home and pays council tax. </li>
+        <li>This pensioner has some entitlement and has a working, non-dependant son living in the household, no benefits.</li>
+      </ul>
         <ul>
           <li><span class="strong">What we changed:<br> </span></li>
           <li>Updated the <a href="lis/2/full-help">end screen</a> because users didn't feel they were 'done'.</li>
@@ -39,22 +44,31 @@
         <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
-      <p>
-        <span class="strong">What we tested: </span> 
-        Full end to end journey for a pensioner who has a state and a private pension, rents their home and pays council tax. This pensioner has full entitlement and there are no others in household, no benefits.
-      </p>
+      <ul>
+        <li><span class="strong">What we tested: </span> </li>
+        <li>Full end to end journey for a pensioner who has a state and a private pension, rents their home and pays council tax. </li>
+        <li>This pensioner has full entitlement and there are no others in household, no benefits.</li>
+      </ul>
       <ul>
         <li><span class="strong">What we found: </span></li> 
         <li>Overall, users found this easy to use.</li> 
-        <li>Biggest issues were around 1) known issues below, 2) language, 3) benefit questions</li> 
+        <li>Biggest issues were around:</li> 
+        <li>1) known issues below</li>
+        <li>2) didn’t feel like they had finished at the end,</li>
+        <li>3) language, 
+        <li>4) benefit questions</li> 
         <li>Users want clearer info around what part of their rent they need to tell us about, if they get help towards it.</li>
         <li>They need clearer feedback that the application has been submitted and what the next steps are. </li>
         <li>Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.</li>
       </ul>
-      <p>
-        <span class="strong">Known issues: </span> 
-        No error messages in the prototype. No feedback when sections are done. Uses dummy data on summary screens. Users don't understand benefits and use different names for them. We need to understand how often people pay for things like rent and be more explicit about monthly, four weekly vs calendar month.
-      </p>
+      <ul>
+        <li><span class="strong">Known issues: </span></li>
+        <li>No error messages in the prototype.</li>
+        <li>No feedback when sections are done.</li>
+        <li>Uses dummy data on summary screens.</li>
+        <li>Users don't understand benefits and use different names for them. </li>
+        <li>We need to understand how often people pay for things like rent and be more explicit about monthly, four weekly vs calendar month.</li>
+      </ul>
       <h2 class="heading-large">Sprint 0</h2>
       <p>Created end March 2016</p>
       <ul>
