--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,26 +7,31 @@
 <main id="content" role="main">
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
       <p>
-        If you have a comment or suggestion for this prototype?
-        <a href="mailto:mark.dobson@nhs.net?Subject=LIS%20Prototype" target="_top">Email us</a>
+        If you have any comments or suggestions for this prototype you can email: <span style="font-weight: bold">mark.dobson1@nhs.net</span>
       </p>
-
-      <h2 class="heading-large">Alpha sprint 3</h2>
-      <p>Created 9 June 2016</p>
-      <a href="/sprint3">View</a>
+      <ul>
+        <li class="heading-medium">Alpha sprint 3</li>
+        <li>Created 9 June 2016</li>
+        <li><a href="/sprint3">View</a></li>
+      </ul>
       <hr>
-      <h2 class="heading-large">Alpha sprint 2</h2>
-      <p>Created end May 2016</p>
-      <a href="/sprint2">View</a>
+      <ul>
+        <li class="heading-medium">Alpha sprint 2</li>
+        <li>Created end May 2016</li>
+        <li><a href="/sprint2">View</a></li>
+      </ul>
       <hr>
-      <h2 class="heading-large">Alpha sprint 1</h2>
-      <p>Created mid May 2016</p>
-      <a href="/sprint1">View</a>
+      <ul>
+        <li class="heading-medium">Alpha sprint 1</li>
+        <li>Created mid May 2016</li>
+        <li><a href="/sprint1">View</a></li>
+      </ul>
       <hr>
-      <h2 class="heading-large">Sprint 0</h2>
-      <p>Created end March 2016</p>
-      <a href="/lis/0/index">View</a>
-
+      <ul>
+        <li class="heading-medium">Sprint 0</li>
+        <li>Created end March 2016</li>
+        <li><a href="/lis/0/index">View</a></li>
+      </ul>
 </main>
 
 {% endblock %}
