--- a/app/views/sprint2.html
+++ b/app/views/sprint2.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <main id="content" role="main">
-      <a href="index"> < Back </a>
+      <a class="back-link" href="index">Back </a>
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
       
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
