disclaimer on home screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,6 +6,8 @@
 
 <main id="content" role="main">
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
+  <p>Please note this is a work in progress it may not represent functionality available in the final version.<br>
+  These prototypes may not render correctly in any browser other than Google Chrome.</p>
       <p>
         If you have any comments or suggestions for this prototype you can email: <span style="font-weight: bold">mark.dobson1@nhs.net</span>
       </p>
