updated the end screen and the start screen

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,20 +12,20 @@
         If you have any comments or suggestions for this prototype you can email: <span style="font-weight: bold">mark.dobson1@nhs.net</span>
       </p>
       <ul>
-        <li class="heading-medium">Alpha sprint 3</li>
-        <li>Created 9 June 2016</li>
+        <li class="heading-medium">Current sprint - Alpha sprint 3 </li>
+        <li>(Mr &amp; Mrs Mattu persona) - Created 9 June 2016</li>
         <li><a href="/sprint3">View</a></li>
       </ul>
       <hr>
       <ul>
-        <li class="heading-medium">Alpha sprint 2</li>
-        <li>Created end May 2016</li>
+        <li class="heading-medium">Alpha sprint 2 </li>
+        <li>(Miriam persona) - Created end May 2016</li>
         <li><a href="/sprint2">View</a></li>
       </ul>
       <hr>
       <ul>
         <li class="heading-medium">Alpha sprint 1</li>
-        <li>Created mid May 2016</li>
+        <li>(Bill persona) - Created mid May 2016</li>
         <li><a href="/sprint1">View</a></li>
       </ul>
       <hr>
