--- a/app/views/lis/3/you/benefits/benefit-group3.html
+++ b/app/views/lis/3/you/benefits/benefit-group3.html
@@ -17,60 +17,59 @@
   </h1>
   <p>Tick all that apply</p>
 
-  <form action="" method="get" class="form">
-
+  <form action="benefit-group3-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="aa" name="minor">
+        <input type="checkbox" id="aa" value="aa" name="bgroup3">
         <label class="form-control-checkbox" for="aa">
           Attendance allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ba" name="minor">
+        <input type="checkbox" id="ba" value="ba" name="bgroup3">
         <label class="form-control-checkbox" for="ba">
           Bereavement allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ca" name="minor">
+        <input type="checkbox" id="ca" value="ca" name="bgroup3">
         <label class="form-control-checkbox" for="ca">
           Carers allowance
         </label>
       </div> 
       <div class="form-group">
-        <input type="checkbox" id="ctc" name="minor">
+        <input type="checkbox" id="ctc" value="ctc" name="bgroup3">
         <label class="form-control-checkbox" for="ctc">
          Child tax credits
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="mp" name="minor">
+        <input type="checkbox" id="mp" value="mp" name="bgroup3">
         <label class="form-control-checkbox" for="mp">
          Maintenance payments
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ma" name="minor">
+        <input type="checkbox" id="ma" value="ma" name="bgroup3">
         <label class="form-control-checkbox" for="ma">
          Maternity allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="wpa" name="minor">
+        <input type="checkbox" id="wpa" value="wpa" name="bgroup3">
         <label class="form-control-checkbox" for="wpa">
           Widowed parents allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="wb" name="minor">
+        <input type="checkbox" id="wb" value="wb" name="bgroup3">
         <label class="form-control-checkbox" for="wb">
           Widows benefits
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" name="bgroup2">
+        <input type="checkbox" id="none" value="none" name="bgroup2">
         <label class="form-control-checkbox" for="none">
           I don't receive any of these
         </label>
@@ -78,7 +77,6 @@
     </div>
     {{
       form_macros.button({
-        href: 'benefit7',
         label: 'Next'
       })
     }}
